--- a/libviso2_matcher/package.xml
+++ b/libviso2_matcher/package.xml
@@ -16,6 +16,8 @@
 	<build_depend>opencv2</build_depend>
 	<build_depend>cv_bridge</build_depend>
 	<build_depend>image_transport</build_depend>	
+	<build_depend>dynamic_reconfigure</build_depend>
+	<build_depend>libviso2_matcher_msgs</build_depend>
 
 	<run_depend>roscpp</run_depend>
 
